tests/asm-link/interpolation-overflow/rgbasm.err
error: fixed-point width cannot be more than 255
   ╭─[ test.asm:4:2 ]
   │
 4 │ {.99999999f:x}\1
   │  ─────┬────  
   │       ╰────── error parsing this format specification
───╯
error: a macro argument was used outside of a macro
   ╭─[ test.asm:4:15 ]
   │
 4 │ {.99999999f:x}\1
   │               ─┬  
   │                ╰── cannot use a macro argument here
───╯
error: syntax error: unexpected number
   ╭─[ x:1:1 ]
   │
 1 │ $0
   │ ─┬  
   │  ╰── expected "identifier", "scoped identifier", "local identifier", ":", "+", "-", "adc", ...90 others
   │
   ├─[ test.asm:4:1 ]
   │
 4 │ {.99999999f:x}\1
   │ ───────┬──────  
   │        ╰──────── interpolated here
───╯
3 errors generated.
